MDK-ARM/.vscode/uv4.log
*** Using Compiler 'V6.21', folder: 'E:\project_app\Keil\Keil_V5\ARM\ARMCLANG\Bin'
Build target 'DART2025Z'
compiling gpio.c...
compiling stm32f4xx_hal_msp.c...
compiling stm32f4xx_hal_pcd_ex.c...
compiling dma.c...
compiling usart.c...
compiling stm32f4xx_hal_rcc.c...
compiling main.c...
compiling stm32f4xx_hal_pcd.c...
compiling can.c...
compiling stm32f4xx_it.c...
compiling stm32f4xx_hal_rcc_ex.c...
compiling stm32f4xx_ll_usb.c...
compiling stm32f4xx_hal_flash.c...
compiling stm32f4xx_hal_flash_ex.c...
compiling stm32f4xx_hal_flash_ramfunc.c...
compiling stm32f4xx_hal_pwr.c...
compiling stm32f4xx_hal_gpio.c...
compiling stm32f4xx_hal_pwr_ex.c...
compiling stm32f4xx_hal_dma.c...
compiling stm32f4xx_hal_exti.c...
compiling stm32f4xx_hal_cortex.c...
compiling minipc_protocol.c...
compiling DWT.c...
compiling motor.c...
compiling stm32f4xx_hal_dma_ex.c...
compiling motorUsr.c...
compiling stm32f4xx_hal.c...
compiling system_stm32f4xx.c...
compiling can_user.c...
compiling PID.c...
compiling remote_control.c...
compiling referee.c...
compiling stm32f4xx_hal_can.c...
compiling bsp_can.c...
compiling struct_typedef.c...
compiling bsp_rc.c...
compiling stm32f4xx_hal_uart.c...
compiling CRC8_CRC16.c...
compiling usb_device.c...
compiling usbd_desc.c...
compiling usbd_cdc_if.c...
compiling usbd_conf.c...
compiling usbd_core.c...
compiling usbd_ioreq.c...
compiling usbd_cdc.c...
compiling usbd_ctlreq.c...
../SYS/dart.c(97): error: expected '(' after 'if'
   97 | }
      | ^
../SYS/dart.c(437): error: function definition is not allowed here
  437 | void manualTask(){
      |                  ^
../SYS/dart.c(464): error: function definition is not allowed here
  464 | void semiAutoTask(){
      |                    ^
../SYS/dart.c(486): error: function definition is not allowed here
  486 | void fullAutoTask(){
      |                    ^
../SYS/dart.c(510): error: expected '}'
  510 | } 
      |   ^
../SYS/dart.c(93): note: to match this '{'
   93 | void refreeDataCheck(){//检查裁判系统数据，修改自动挡模式飞镖数据
      |                       ^
5 errors generated.
compiling dart.c...
"DART2025Z\DART2025Z.axf" - 5 Error(s), 0 Warning(s).
Target not created.
Build Time Elapsed:  00:00:02
